fix: fix overflow x white space

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -32,6 +32,9 @@ html.dark {
     background-color: theme('colors.slate.400');
   }
 }
+html {
+  overflow-x: hidden;
+}
 
 // animations
 @import 'animations/transitions';
